# OPIDE

./: .gitignore  Cargo.toml  LICENSE  OPENPAWZ_EXTRACTION_PLAN.md  README.md  chat.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
OpenPawz/: tsconfig.json
OpenPawz/src-tauri/: Cargo.toml
OpenPawz/src-tauri/src/: lib.rs  main.rs
OpenPawz/src-tauri/src/atoms/: traits.rs  types.rs
OpenPawz/src-tauri/src/commands/: chat.rs  config.rs  integration_map.rs  integrations.rs  mcp.rs  mod.rs  n8n.rs  oauth.rs
OpenPawz/src-tauri/src/engine/: chat.rs  compaction.rs  http.rs  mod.rs  state.rs  swarm.rs  tasks.rs  types.rs  util.rs
OpenPawz/src-tauri/src/engine/agent_loop/: helpers.rs  mod.rs  sandbox_enforcement.rs
OpenPawz/src-tauri/src/engine/channels/: agent.rs
OpenPawz/src-tauri/src/engine/constrained/: atoms.rs
OpenPawz/src-tauri/src/engine/engram/: consolidation.rs  context_builder.rs  dream_replay.rs  encryption.rs  hnsw.rs  working_memory.rs
OpenPawz/src-tauri/src/engine/mcp/: registry.rs  transport.rs
OpenPawz/src-tauri/src/engine/memory/: mod.rs
OpenPawz/src-tauri/src/engine/orchestrator/: agent_loop.rs  mod.rs  sub_agent.rs
OpenPawz/src-tauri/src/engine/prompts/: ide_coding.md  ide_platform.md
OpenPawz/src-tauri/src/engine/providers/: anthropic.rs  google.rs  mod.rs  openai.rs
OpenPawz/src-tauri/src/engine/sessions/: engram.rs  messages.rs  schema.rs
OpenPawz/src-tauri/src/engine/skills/: vault.rs
OpenPawz/src-tauri/src/engine/speculative/: atoms.rs
OpenPawz/src-tauri/src/engine/tools/: exec.rs  fetch.rs  filesystem.rs  mod.rs  squads.rs  worker_delegate.rs
OpenPawz/src/views/memory-palace/: graph.ts
OpenPawz/src/views/settings-models/: atoms.ts
crates/opide-ai/: Cargo.toml
crates/opide-ai/src/: lib.rs
crates/opide-ai/src/engine/: frontend_bridge.rs  mod.rs  tool_filter.rs
crates/opide-ai/src/engine/tools/: host_api.rs  mod.rs  tool_defs.rs  tool_executor.rs
crates/opide-ai/src/indexer/: call_graph.rs  chunker.rs  context.rs  embeddings.rs  index.rs  mod.rs  parser.rs  scanner.rs  type_graph.rs  types.rs
crates/opide-bridge/: Cargo.toml
crates/opide-bridge/src/: claude_code.rs  lib.rs
crates/opide-engine/: Cargo.toml
crates/opide-engine/benches/: engram_bench.rs
crates/opide-engine/src/: lib.rs
crates/opide-engine/src/atoms/: engram_types.rs  traits.rs  types.rs
crates/opide-engine/src/commands/: chat.rs  config.rs  memory.rs
crates/opide-engine/src/engine/: chat.rs  compaction.rs  events.rs  injection.rs  key_vault.rs  mod.rs  state.rs  tool_index.rs  util.rs  vault.rs
crates/opide-engine/src/engine/agent_loop/: mod.rs  sandbox_enforcement.rs
crates/opide-engine/src/engine/engram/: abstraction_tree.rs  bridge.rs  cognitive_state.rs  consolidation.rs  dream_replay.rs  encryption.rs  gated_search.rs  hnsw.rs  mod.rs
crates/opide-engine/src/engine/mcp/: transport.rs
crates/opide-engine/src/engine/memory/: embedding.rs
crates/opide-engine/src/engine/prompts/: ide_mcp.md  ide_platform.md
crates/opide-engine/src/engine/providers/: anthropic.rs  google.rs  openai.rs
crates/opide-engine/src/engine/sessions/: config.rs  dashboards.rs  engram.rs  memories.rs  messages.rs  mod.rs  projects.rs  schema.rs  sessions.rs  squads.rs  tasks.rs  templates.rs
crates/opide-engine/src/engine/tools/: agents.rs  exec.rs  fetch.rs  filesystem.rs  tasks.rs  worker_delegate.rs
crates/opide-engine/tests/: integration.rs  loop_detection.rs  session_lifecycle.rs  tool_classification.rs
crates/opide-shell/: Cargo.toml
crates/opide-shell/src/: dap.rs  extensions.rs  git.rs  ide_mcp.rs  lib.rs  lsp.rs  remote.rs  search.rs  terminal.rs  utf8.rs  watcher.rs
docs/: CURSOR-GAP-ANALYSIS.md  EDIT-REVIEW-PLAN.md  OPIDE-VS-CURSOR-STRATEGY.md  PRODUCTION-CHECKLIST.md
extension-adapters/: dbaeumer.vscode-eslint.mcp.cjs  generate-adapter.cjs  prettier.mcp.cjs  stylelint.vscode-stylelint.mcp.cjs  wayou.vscode-todo-highlight.mcp.cjs
node-extension-host/: package-lock.json  package.json  tsconfig.json
node-extension-host/scripts/: gen-api-stubs.ts
node-extension-host/src/: api-shim-generated.ts  api-shim.ts  bootstrap.ts  extension-scanner.ts  ipc-bridge.ts
node-extension-host/test/: smoke.mjs
opide-sandbox/: Cargo.toml
opide-sandbox/src/: host_api.rs  lib.rs
opide-sandbox/src/executor/: helpers.rs  host_inject.rs  mod.rs  runtime.rs  tests.rs
scripts/: build-release-signed.sh
src/: chat-main.ts  global.css  main.ts  monaco-editor.d.ts  tauri-fs-provider.ts  workbench.ts
src-tauri/: Cargo.toml  OPIDE_NOTES.md  entitlements.plist  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/opide/: app-menu.ts  extension-auth.ts  extension-bridge.ts  extension-chat-participants.ts  extension-contributed-views.ts  extension-debug.ts  extension-decorations.ts  extension-lm.ts  extension-loader.ts  extension-mcp.ts  extension-notebooks.ts  extension-scm.ts  extension-tasks.ts  extension-terminal.ts  extension-tests.ts  extension-tree-views.ts  extension-webview-views.ts  extension-webviews.ts  ide-context.ts  lsp-client.ts  monaco.ts  opide-activity-feed.ts  opide-add-to-chat.ts  opide-completions.ts  opide-editor.ts  opide-extensions.ts  opide-inline.ts  opide-memory-palace.ts  opide-provider-settings.ts  opide-terminal-cmdk.ts  opide-tool-bridge.ts  scm-provider.ts  search-provider.ts  terminal-backend.ts  workspace.ts
src/opide/chat/: index.ts  prefs.ts  render.ts  send.ts  settings.ts  state.ts  streaming.ts  system-prompt.ts  types.ts
src/opide/memory-palace/: connection.ts  embedding-scatter.ts  engine.ts  graph.ts  helpers.ts  index.ts  molecules.ts  toast.ts  types.ts
src/opide/memory-palace/styles/: memory-palace.css  memory.css
src/styles/: opide-overrides.css  opide-tokens.css
src/types/: css.d.ts  openpawz-aliases.d.ts  vscode-internals.d.ts
