[package]
name = "opide-ai"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "OPIDE AI — AST indexer, WASM skill registry, tool executor, diff editor, embeddings"

[dependencies]
# Workspace shared
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
uuid.workspace = true
async-trait.workspace = true

# Tauri (for commands, AppHandle, State, Emitter, Manager)
tauri = { version = "2", features = [] }

# OPIDE engine (types, traits, EngineState)
opide-engine = { path = "../opide-engine", default-features = false }

# OPIDE Shell (ide_mcp, git — used by tool executor)
opide-shell = { path = "../opide-shell" }

# OPIDE Sandbox (WASM + JS execution)
opide-sandbox = { path = "../../opide-sandbox" }

# AST parsing
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
solang-parser = "0.3"

# Utilities
dirs = "5"
regex = "1"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
