[package]
name = "opide-bridge"
version = "0.1.0"
edition = "2021"
description = "OPIDE ↔ OpenPawz bridge — hook implementations for IDE-specific behavior"

[dependencies]
# OpenPawz engine (for traits and types)
openpawz = { path = "../../OpenPawz/src-tauri" }

# Shared workspace deps
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
uuid.workspace = true
async-trait.workspace = true
chrono = "0.4"
